--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -1,6 +1,6 @@
 [- Install selenium]
-- login to etoro
-- get a price for a stock
+[- login to etoro]
+[- get a price for a stock]
 - configure to follow a stock
 - configure to buy/sell stocks if price is x 
 - buy/sell stocks
