--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -1,7 +1,9 @@
-[- Install selenium]
+[- install selenium]
 [- login to etoro]
 [- get a price for a stock]
 - monitor stocks
     - find a stock
 - configure to buy/sell stocks if price is x 
+    - create a config file
+    - load the config file
 - buy/sell stocks
