--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -3,7 +3,8 @@
 [- get a price for a stock]
 [- monitor stocks]
     [- find a stock]
-- configure to buy/sell stocks if price is x 
-    - create a config file
-    - load the config file
-- buy/sell stocks
+[- configure to buy/sell stocks if price is x ]
+   [ - create a config file]
+   [ - load the config file]
+- buy stocks
+- sell stocks
