--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -1,11 +1,3 @@
-[- install selenium]
-[- login to etoro]
-[- get a price for a stock]
-[- monitor stocks]
-    [- find a stock]
-[- configure to buy/sell stocks if price is x ]
-   [ - create a config file]
-   [ - load the config file]
-- get a xkey by a stock;
-- buy stocks
-- sell stocks
+- add prints
+- add buy button
+
