--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -1,1 +1,1 @@
-- Configuration of buy/sell stocks is very complicated. Make it more easy configure it;  
+- There is a bug after 3 times closing the script. On 4th time it can't start;
