Created a method in seleniumWrappare that clean up selenium resources and quit the driver server

--- a/Bots/eToroBot/ToDo
+++ b/Bots/eToroBot/ToDo
@@ -1,65 +1,3 @@
-- There is a bug after 3 times closing the script.It can't start after that;
-[scitickart@scitickart eToroBot]$ python eToroBot.py
-Traceback (most recent call last):
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 699, in urlopen
-    httplib_response = self._make_request(
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 445, in _make_request
-    six.raise_from(e, None)
-  File "<string>", line 3, in raise_from
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 440, in _make_request
-    httplib_response = conn.getresponse()
-  File "/usr/lib/python3.9/http/client.py", line 1347, in getresponse
-    response.begin()
-  File "/usr/lib/python3.9/http/client.py", line 307, in begin
-    version, status, reason = self._read_status()
-  File "/usr/lib/python3.9/http/client.py", line 276, in _read_status
-    raise RemoteDisconnected("Remote end closed connection without"
-http.client.RemoteDisconnected: Remote end closed connection without response
-
-During handling of the above exception, another exception occurred:
-
-Traceback (most recent call last):
-  File "/home/scitickart/gitHub/ArchLinuxScripts/Bots/eToroBot/eToroBot.py", line 200, in <module>
-    etoro = EToroBot ()
-  File "/home/scitickart/gitHub/ArchLinuxScripts/Bots/eToroBot/eToroBot.py", line 37, in __init__
-    driverObj = Driver("/home/scitickart/.mozilla/firefox/w05kja2g.default")
-  File "/home/scitickart/gitHub/ArchLinuxScripts/Bots/eToroBot/driver.py", line 12, in __init__
-    self.driver = webdriver.Firefox(self.profile)
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/firefox/webdriver.py", line 170, in __init__
-    RemoteWebDriver.__init__(
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py", line 157, in __init__
-    self.start_session(capabilities, browser_profile)
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py", line 252, in start_session
-    response = self.execute(Command.NEW_SESSION, parameters)
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/remote/webdriver.py", line 319, in execute
-    response = self.command_executor.execute(driver_command, params)
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/remote/remote_connection.py", line 374, in execute
-    return self._request(command_info[0], url, body=data)
-  File "/usr/lib/python3.9/site-packages/selenium/webdriver/remote/remote_connection.py", line 397, in _request
-    resp = self._conn.request(method, url, body=body, headers=headers)
-  File "/usr/lib/python3.9/site-packages/urllib3/request.py", line 78, in request
-    return self.request_encode_body(
-  File "/usr/lib/python3.9/site-packages/urllib3/request.py", line 170, in request_encode_body
-    return self.urlopen(method, url, **extra_kw)
-  File "/usr/lib/python3.9/site-packages/urllib3/poolmanager.py", line 375, in urlopen
-    response = conn.urlopen(method, u.request_uri, **kw)
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 755, in urlopen
-    retries = retries.increment(
-  File "/usr/lib/python3.9/site-packages/urllib3/util/retry.py", line 532, in increment
-    raise six.reraise(type(error), error, _stacktrace)
-  File "/usr/lib/python3.9/site-packages/urllib3/packages/six.py", line 734, in reraise
-    raise value.with_traceback(tb)
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 699, in urlopen
-    httplib_response = self._make_request(
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 445, in _make_request
-    six.raise_from(e, None)
-  File "<string>", line 3, in raise_from
-  File "/usr/lib/python3.9/site-packages/urllib3/connectionpool.py", line 440, in _make_request
-    httplib_response = conn.getresponse()
-  File "/usr/lib/python3.9/http/client.py", line 1347, in getresponse
-    response.begin()
-  File "/usr/lib/python3.9/http/client.py", line 307, in begin
-    version, status, reason = self._read_status()
-  File "/usr/lib/python3.9/http/client.py", line 276, in _read_status
-    raise RemoteDisconnected("Remote end closed connection without"
-urllib3.exceptions.ProtocolError: ('Connection aborted.', RemoteDisconnected('Remote end closed connection without response'))
+[- move get request to seleniumWrapper - 1000pt]
+[- create a close method in seleniumWrappare that will clean resources and quit the driver server;]
+- optimize get requests. Remove time.sleep (15) -2000pt
